--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,7 +11,7 @@
 }
 
 .site-title {
-    font-size: 26px;
+    //font-size: 26px;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
@@ -24,6 +24,7 @@
 
     img {
       height: 32px;
+      vertical-align: middle;
     }
 }
 
@@ -45,49 +46,49 @@
         }
     }
 
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-        }
-    }
+    // @include media-query($on-palm) {
+    //     position: absolute;
+    //     top: 9px;
+    //     right: 30px;
+    //     background-color: $background-color;
+    //     border: 1px solid $grey-color-light;
+    //     border-radius: 5px;
+    //     text-align: right;
+    //
+    //     .menu-icon {
+    //         display: block;
+    //         float: right;
+    //         width: 36px;
+    //         height: 26px;
+    //         line-height: 0;
+    //         padding-top: 10px;
+    //         text-align: center;
+    //
+    //         > svg {
+    //             width: 18px;
+    //             height: 15px;
+    //
+    //             path {
+    //                 fill: $grey-color-dark;
+    //             }
+    //         }
+    //     }
+    //
+    //     .trigger {
+    //         clear: both;
+    //         display: none;
+    //     }
+    //
+    //     &:hover .trigger {
+    //         display: block;
+    //         padding-bottom: 5px;
+    //     }
+    //
+    //     .page-link {
+    //         display: block;
+    //         padding: 5px 10px;
+    //     }
+    // }
 }
 
 
@@ -250,12 +251,14 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100vh;
+  min-width: 100%;
+  min-height: 100vh;
   z-index: -100;
   overflow: hidden;
 
   video {
-    width: 100%;
+    min-height: inherit;
+    min-width: inherit;
   }
 }
 
